lidar_system/log/build_2025-12-07_20-53-19/servo_control/stderr.log
/root/lidar_system/servo_control/src/lidar_pointcloud_node.cpp: In member function ‘void LaserToPointCloudNode::scan_callback(sensor_msgs::msg::LaserScan_<std::allocator<void> >::SharedPtr)’:
/root/lidar_system/servo_control/src/lidar_pointcloud_node.cpp:45:44: error: no matching function for call to ‘tf2_ros::Buffer::lookupTransform(const char [10], std_msgs::msg::Header_<std::allocator<void> >::_frame_id_type&, const TimePoint&, rclcpp::Duration)’
   45 |         rclcpp::Duration::from_seconds(0.5));
      |                                            ^
In file included from /root/lidar_system/servo_control/src/lidar_pointcloud_node.cpp:5:
/opt/ros/foxy/include/tf2_ros/buffer.h:85:5: note: candidate: ‘virtual geometry_msgs::msg::TransformStamped tf2_ros::Buffer::lookupTransform(const string&, const string&, const TimePoint&, tf2::Duration) const’
   85 |     lookupTransform(const std::string& target_frame, const std::string& source_frame,
      |     ^~~~~~~~~~~~~~~
/opt/ros/foxy/include/tf2_ros/buffer.h:86:69: note:   no known conversion for argument 4 from ‘rclcpp::Duration’ to ‘tf2::Duration’ {aka ‘std::chrono::duration<long int, std::ratio<1, 1000000000> >’}
   86 |                     const tf2::TimePoint& time, const tf2::Duration timeout) const override;
      |                                                 ~~~~~~~~~~~~~~~~~~~~^~~~~~~
/opt/ros/foxy/include/tf2_ros/buffer.h:94:5: note: candidate: ‘geometry_msgs::msg::TransformStamped tf2_ros::Buffer::lookupTransform(const string&, const string&, const rclcpp::Time&, rclcpp::Duration) const’
   94 |     lookupTransform(const std::string& target_frame, const std::string& source_frame,
      |     ^~~~~~~~~~~~~~~
/opt/ros/foxy/include/tf2_ros/buffer.h:95:28: note:   no known conversion for argument 3 from ‘const TimePoint’ {aka ‘const std::chrono::time_point<std::chrono::_V2::system_clock, std::chrono::duration<long int, std::ratio<1, 1000000000> > >’} to ‘const rclcpp::Time&’
   95 |       const rclcpp::Time & time, const rclcpp::Duration timeout=rclcpp::Duration(0)) const
      |       ~~~~~~~~~~~~~~~~~~~~~^~~~
/opt/ros/foxy/include/tf2_ros/buffer.h:114:5: note: candidate: ‘virtual geometry_msgs::msg::TransformStamped tf2_ros::Buffer::lookupTransform(const string&, const TimePoint&, const string&, const TimePoint&, const string&, tf2::Duration) const’
  114 |     lookupTransform(const std::string& target_frame, const tf2::TimePoint& target_time,
      |     ^~~~~~~~~~~~~~~
/opt/ros/foxy/include/tf2_ros/buffer.h:114:5: note:   candidate expects 6 arguments, 4 provided
/opt/ros/foxy/include/tf2_ros/buffer.h:125:5: note: candidate: ‘geometry_msgs::msg::TransformStamped tf2_ros::Buffer::lookupTransform(const string&, const rclcpp::Time&, const string&, const rclcpp::Time&, const string&, rclcpp::Duration) const’
  125 |     lookupTransform(const std::string & target_frame, const rclcpp::Time & target_time,
      |     ^~~~~~~~~~~~~~~
/opt/ros/foxy/include/tf2_ros/buffer.h:125:5: note:   candidate expects 6 arguments, 4 provided
In file included from /opt/ros/foxy/include/laser_geometry/laser_geometry.hpp:41,
                 from /root/lidar_system/servo_control/src/lidar_pointcloud_node.cpp:4:
/opt/ros/foxy/include/tf2/buffer_core.h:153:5: note: candidate: ‘virtual geometry_msgs::msg::TransformStamped tf2::BufferCore::lookupTransform(const string&, const TimePoint&, const string&, const TimePoint&, const string&) const’
  153 |     lookupTransform(const std::string& target_frame, const TimePoint& target_time,
      |     ^~~~~~~~~~~~~~~
/opt/ros/foxy/include/tf2/buffer_core.h:153:5: note:   candidate expects 5 arguments, 4 provided
/opt/ros/foxy/include/tf2/buffer_core.h:136:5: note: candidate: ‘virtual geometry_msgs::msg::TransformStamped tf2::BufferCore::lookupTransform(const string&, const string&, const TimePoint&) const’
  136 |     lookupTransform(const std::string& target_frame, const std::string& source_frame,
      |     ^~~~~~~~~~~~~~~
/opt/ros/foxy/include/tf2/buffer_core.h:136:5: note:   candidate expects 3 arguments, 4 provided
make[2]: *** [CMakeFiles/lidar_pointcloud_node.dir/build.make:63: CMakeFiles/lidar_pointcloud_node.dir/src/lidar_pointcloud_node.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:109: CMakeFiles/lidar_pointcloud_node.dir/all] Error 2
make[1]: *** Waiting for unfinished jobs....
make: *** [Makefile:141: all] Error 2
